[gd_scene load_steps=20 format=3 uid="uid://ddh1ya3eo1r2k"]

[ext_resource type="Script" path="res://Scenes/start_screen.gd" id="1_krd8m"]
[ext_resource type="Texture2D" uid="uid://cohjldet1u0br" path="res://Assets/env/MainBG.png" id="1_w78yl"]
[ext_resource type="LabelSettings" uid="uid://dkxqwnbtyd37q" path="res://Assets/Fonts/TitleFontBigBlue.tres" id="2_n0pen"]
[ext_resource type="FontFile" uid="uid://cq2eoifnq63wf" path="res://Assets/Fonts/SourGummy-VariableFontwght.ttf" id="3_dxkwu"]
[ext_resource type="Theme" uid="uid://qls1k3mlglce" path="res://Assets/Themes/button_theme.tres" id="4_hc1st"]
[ext_resource type="LabelSettings" uid="uid://dirnaa0p38ohu" path="res://Assets/Fonts/StandardFont_Gummy.tres" id="6_4cyh3"]
[ext_resource type="Texture2D" uid="uid://btg8k7vajp402" path="res://Assets/Flags/flag_gb.svg" id="6_84u72"]
[ext_resource type="Texture2D" uid="uid://cyanjx4qsuh45" path="res://Assets/Flags/flag_it.svg" id="7_ytpxl"]
[ext_resource type="Texture2D" uid="uid://cir2mbg0qjh5c" path="res://Assets/Flags/flag_es.svg" id="8_8cnpk"]
[ext_resource type="Texture2D" uid="uid://d0ui0dryx4c8y" path="res://Assets/Flags/flag_de.svg" id="10_n8l8w"]
[ext_resource type="Texture2D" uid="uid://bktofya4jqcvj" path="res://Assets/Flags/flag_fr.svg" id="11_ivl53"]

[sub_resource type="Shader" id="Shader_l2mqf"]
code = "shader_type canvas_item;

uniform sampler2D noise_tex;
uniform float dissolve_pct:hint_range(0.0, 1.0) = 0.0f;

void fragment()
{
	//float dissolve_pct = 0.5*sin(TIME*0.5)+0.5;
	vec4 original_color = texture(TEXTURE, UV);
	vec4 noise = texture(noise_tex, UV);

	if (dissolve_pct > noise.r)
	{
		original_color.a = 0.0;
	}

	COLOR = original_color;
	//COLOR.a = original_color.a;
}"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_cygvc"]
frequency = 0.006

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_s724y"]
noise = SubResource("FastNoiseLite_cygvc")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m5x3m"]
shader = SubResource("Shader_l2mqf")
shader_parameter/dissolve_pct = 0.0
shader_parameter/noise_tex = SubResource("NoiseTexture2D_s724y")

[sub_resource type="LabelSettings" id="LabelSettings_6jjqe"]
font = ExtResource("3_dxkwu")
font_size = 32
font_color = Color(0.744792, 0.57508, 0.0659451, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_pvp5r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:material:shader_parameter/dissolve_pct")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bsfso"]
resource_name = "dissolve"
length = 15.0
loop_mode = 2
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:material:shader_parameter/dissolve_pct")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qvplf"]
_data = {
"RESET": SubResource("Animation_pvp5r"),
"dissolve": SubResource("Animation_bsfso")
}

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_krd8m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_m5x3m")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_w78yl")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Titolo" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SALVIAMO LE STORIE"
label_settings = ExtResource("2_n0pen")
horizontal_alignment = 1
language = "en"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Titolo2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Difficolt√†:"
label_settings = SubResource("LabelSettings_6jjqe")

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 45)
layout_mode = 2
theme = ExtResource("4_hc1st")
theme_override_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="Easy" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
text = "FACILE"

[node name="EasyRecord" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
text = "00000"
label_settings = ExtResource("6_4cyh3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 45)
layout_mode = 2
theme = ExtResource("4_hc1st")
theme_override_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="Medium" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer4/VBoxContainer"]
layout_mode = 2
text = "INTERMEDIO"

[node name="MidRecord" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer4/VBoxContainer"]
layout_mode = 2
text = "00000"
label_settings = ExtResource("6_4cyh3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 45)
layout_mode = 2
theme = ExtResource("4_hc1st")
theme_override_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer5"]
layout_mode = 2

[node name="Hard" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer5/VBoxContainer"]
layout_mode = 2
text = "DIFFICILE"

[node name="HardRecord" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer5/VBoxContainer"]
layout_mode = 2
text = "00000"
label_settings = ExtResource("6_4cyh3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qvplf")
}
autoplay = "dissolve"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LangEnButton" type="TextureButton" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
texture_normal = ExtResource("6_84u72")
ignore_texture_size = true
stretch_mode = 0

[node name="LangItButton" type="TextureButton" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
texture_normal = ExtResource("7_ytpxl")
ignore_texture_size = true
stretch_mode = 0

[node name="LangEsButton" type="TextureButton" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
texture_normal = ExtResource("8_8cnpk")
ignore_texture_size = true
stretch_mode = 0

[node name="LangDeButton" type="TextureButton" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
texture_normal = ExtResource("10_n8l8w")
ignore_texture_size = true
stretch_mode = 0

[node name="LangFrButton" type="TextureButton" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
texture_normal = ExtResource("11_ivl53")
ignore_texture_size = true
stretch_mode = 0

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 410.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResetButton" type="Button" parent="MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("4_hc1st")
text = "Resetta i punteggi"

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer3/VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer4/VBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MarginContainer5/VBoxContainer/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/LangEnButton" to="." method="_on_lang_en_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/LangItButton" to="." method="_on_lang_it_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/LangEsButton" to="." method="_on_lang_es_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/LangDeButton" to="." method="_on_lang_de_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/LangFrButton" to="." method="_on_lang_fr_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/ResetButton" to="." method="_on_reset_button_pressed"]
